automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,21 +1,40 @@
 <!doctype html>
 <html>
   <head>
-    <title>Pets in Hats</title>
+    <meta charset="UTF-8">
+    <title>Quiz</title>
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
   </head>
-  <body>
-    <h1> Get ready to see an animal in a hat!</h1>
-  <form method="POST">
-    <h4> Choose an animal: </h4>
-    <br>
-    <input type = "radio" name = "user_animal" value = "dog">Dog<br>
-    <input type = "radio" name = "user_animal" value = "cat">Cat<br>
-    <h4>Choose a hat: </h4>
-    <br>
-    <input type = "radio" name = "user_hat" value = "party-hat">Party Hat<br>
-    <input type = "radio" name = "user_hat" value = "top-hat">Top Hat<br>
-    <input type = "radio" name = "user_hat" value = "bucket-hat">Bucket Hat<br>
-    <input type = "submit" value = "Show me that cute animal!">
+  <body background="http://s7.favim.com/orig/150107/background-emoji-wallpaper-emoji-wallpaper-Favim.com-2366197.jpg">
+    <h1> What content do you want to upload?</h1>
+
+  <form method="post" action="/end_page">
+    <input type="radio" name="content" value="image" checked> Image <br>
+    <input type="radio" name="content" value="text" checked> Text <br>
+    <input type="radio" name="content" value="video" checked> Video <br>
+    <h3> Who do you want to see this? </h3>
+
+    <input type="radio" name="audience" value="family_and_friends" checked> Family and Friends <br>
+    <input type="radio" name="audience" value="everyone" checked> Everyone <br>
+    <input type="radio" name="audience" value="business" checked> Business <br>
+      
+    <h3> What is the level of importance? </h3>
+
+    <input type="radio" name="importance" value="1" checked> 1 <br>
+    <input type="radio" name="importance" value="5" checked> 5 <br>
+    <input type="radio" name="importance" value="10" checked> 10 <br>
+
+    <h3> What is the purpose of the post? </h3>
+    <input type="radio" name="purpose" value="funny" checked> Funny <br>
+    <input type="radio" name="purpose" value="serious" checked> Serious <br>
+    <input type="radio" name="purpose" value="for_fun" checked> For Fun <br>
+    <input type="radio" name="purpose" value="event" checked> Event <br>
+    <input type="radio" name="purpose" value="artsy" checked> Artsy <br>
+
+    <h3>When you're done Submit it</h3>
+
+    <a href="end_page"><button type="submit">Submit</button></a>
   </form>
-  </body>
+</body>
+
 </html>
