automatically backed up by learn

--- a/views/results.erb
+++ b/views/results.erb
@@ -1,11 +1,23 @@
-#this will display the image of the animal in the hat
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Results!!</title>
+    <meta charset="UTF-8">
+    <title>SmartPost</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
-  <body>
-    <h1>HERE IS THE CUTE ANIMAL!!</h1>
-    <img src = "<%=@animal_pic%>"/>
+  <body background="http://s7.favim.com/orig/150107/background-emoji-wallpaper-emoji-wallpaper-Favim.com-2366197.jpg">
+  <!-- <div class="end_page"> -->
+
+    <h1>Looks like you should use...</h1>
+    <h2> Instagram </h2>
+
+    <a href="https://www.instagram.com/?hl=en"><h3> Instagram </h3>
+    <a href="https://www.facebook.com/"><h3> Facebook </h3>
+    <a href="https://www.twitter.com/"><h3> Twitter </h3>
+    <a href="https://www.snapchat.com"><h3> Snapchat </h3>
+    <a href="https://www.youtube.com"><h3> Youtube </h3>
+
   </body>
 </html>
+
+
